fix:修改tab的z-index值

--- a/src/styles/components/bangdan/com.less
+++ b/src/styles/components/bangdan/com.less
@@ -42,9 +42,11 @@
       }
     }
     .slide-tabs{
+        z-index: 10;
         .wrapper{
             position: relative;
             background: white;
+            z-index: 10;
             a{
                 text-align: center;
                 width: 25%;
